# smolagent-tuto

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  main.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yml
src/: agent.py  agents.py  browser_tools.py  documents.py  driver.py  logger.py  mcp.py  models.py  tools.py  utils.py
