[project]
name = "smolagent-tuto"
version = "0.1.0"
description = "Agent tutorial"
authors = [{ name = "Adrien", email = "ruaultadrien@gmail.com" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "smolagents[litellm, mcp, toolkit]>=1.18.0,<2",
    "duckduckgo-search>=8.0.2,<9",
    "gradio>=5.31.0,<6",
    "opentelemetry-sdk>=1.33.1,<2",
    "opentelemetry-exporter-otlp>=1.33.1,<2",
    "openinference-instrumentation-smolagents>=0.1.12,<0.2",
    "ruff>=0.12.0,<0.13",
    "langchain>=0.3.25,<0.4",
    "langchain-community>=0.3.25,<0.4",
    "google-search-results>=2.4.2,<3",
    "mcp>=1.9.4,<2",
    "plotly>=6.1.2,<7",
    "geopandas",
    "kaleido>=1.0.0,<2",
    "ipykernel>=6.29.5,<7",
    "helium>=5.1.1,<6",
    "selenium>=4.34.2,<5",
]
email = "ruaultadrien@gmail.com"

[dependency-groups]
dev = ["pre-commit>=4.2.0,<5"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # The following two rules are incompatible and must be configured.
    # See: https://docs.astral.sh/ruff/rules/#conflicting-rules
    "D203",
    "D212",
]
